# kblas-gpu

./: CMakeLists.txt  Doxyfile  INSTALL  Jenkinsfile  LICENSE  Makefile  README.md  kblas-test-batch-parallel.py  kblas-test-l2.sh  kblas-test-l3-parallel.py  kblas-test-l3.py  make.inc
cmake/: kblasgpu-config.cmake.in
include/: CMakeLists.txt  batch_ara.h  batch_block_copy.h  batch_geqp.h  batch_pstrf.h  batch_qr.h  batch_rand.h  batch_svd.h  batch_transpose.h  defs.h  kblas.h  kblas_batch.h  kblas_defs.h  kblas_l2.h  kblas_l3.h  kblas_operators.h  kblas_potrf.h  kblas_tlr.h  operators.h
src/: CMakeLists.txt  Makefile  Xblas_core.ch  Xblas_core.cu  Xhelper_funcs.ch  Xtr_common.ch  Xtr_common.cpp  Xtr_common.cu  Xtrmm.cu  Xtrmm.hxx  Xtrsm.cu  cgemm_mgpu.cu  cgemv.cu  cgemv2_offset.cu  chemv_mgpu.cu  chemv_offset.cu  dgemm_mgpu.cu  dgemv.cu  dgemv2_offset.cu  dscal.cu  dsymv.cu  dsymv_mgpu.cu  dsymv_offset.cu  gemv2_offset_core.cuh  gemv_mgpu_offset_core.cuh  kblas_common.cpp  kblas_common.cu  kblas_common.h  kblas_error.h  kblas_gpu_timer.h  kblas_gpu_util.ch  kblas_prec_def.h  kblas_struct.h  mgpu_control.h  scal_core.cuh  sgemv.cu  sgemv2_offset.cu  sgemv_mgpu.cu  ssymv.cu  ssymv_mgpu.cu  (+6 more)
src/batch_svd/: CMakeLists.txt  Makefile  Xaca_batch.cu  Xaca_batch_core.cuh  Xsvd_full_batch.cu  Xsvd_full_batch_core.cuh  ara_util.cuh  batch_ara.cu  batch_block_copy.cu  batch_block_copy.h  batch_block_set.cu  batch_block_set.h  batch_geqp.cu  batch_mm_wrappers.cu  batch_mm_wrappers.h  batch_permute.cu  batch_permute.h  batch_pstrf.cu  batch_pstrf.h  batch_qr.cu  batch_rand.cu  batch_rand.h  batch_svd.cu  batch_transpose.cu  batch_transpose.h  batch_tsqr_chol.cu  batch_tsqr_chol.h  bidiag.cu  gpu_err_check.h  gpu_util.h  mini_blas.h  mini_blas_gpu.h  perf_counter.h  qr_kernels.cuh  svd_kernels.cuh  thrust_wrappers.cu  thrust_wrappers.h  timer.h
src/batch_triangular/: CMakeLists.txt  Makefile  Xblas_core.ch  Xgemm_batch.cu  Xgemm_batch_core.cuh  Xhelper_funcs.ch  Xhelper_funcs.cu  Xhelper_funcs.cuh  Xlauum_batch.cu  Xlauum_batch_drivers.cuh  Xlauum_batch_kernels.cuh  Xposv_batch.cu  Xposv_batch_drivers.cuh  Xposv_batch_kernels.cuh  Xpoti_batch.cu  Xpoti_batch_drivers.cuh  Xpoti_batch_kernels.cuh  Xpotrf_batch.cu  Xpotrf_batch_drivers.cuh  Xpotrf_batch_kernels.cuh  Xpotri_batch.cu  Xpotri_batch_drivers.cuh  Xpotri_batch_kernels.cuh  Xpotrs_batch.cu  Xpotrs_batch_drivers.cuh  Xpotrs_batch_kernels.cuh  Xsyrk_batch.cu  Xsyrk_batch_drivers.cuh  Xsyrk_batch_kernels.cuh  Xtrmm_batch.cu  Xtrmm_batch_drivers.cuh  Xtrmm_batch_kernels.cuh  Xtrsm_batch.cu  Xtrsm_batch_drivers.cuh  Xtrsm_batch_kernels.cuh  Xtrtri_batch.cu  Xtrtri_batch_drivers.cuh  Xtrtri_batch_kernels.cuh  batch_common.ch  batch_common.cu
src/blas_l2/: CMakeLists.txt  Makefile  cgemm_mgpu.cu  cgemv.cu  cgemv2.cu  cgemv2_offset.cu  cgemv_mgpu.cu  cgemv_offset.cu  chemv.cu  chemv_mgpu.cu  chemv_offset.cu  cscal.cu  dgemm_mgpu.cu  dgemv.cu  dgemv2.cu  dgemv2_offset.cu  dgemv_mgpu.cu  dgemv_offset.cu  dscal.cu  dsymv.cu  dsymv_mgpu.cu  dsymv_offset.cu  gemm_aux.cuh  gemv2_core.cuh  gemv2_offset_core.cuh  gemv_core.cuh  gemv_mgpu_core.cuh  gemv_mgpu_offset_core.cuh  gemv_offset_core.cuh  mgpu_control.cu  mgpu_control.h  scal_core.cuh  sgemm_mgpu.cu  sgemv.cu  sgemv2.cu  sgemv2_offset.cu  sgemv_mgpu.cu  sgemv_offset.cu  sscal.cu  ssymv.cu  (+16 more)
src/blas_l3/: CMakeLists.txt  Makefile  Xtrmm.cu  Xtrsm.cu
src/blas_tlr/: CMakeLists.txt  Makefile  Xgemm_tlr.cu  Xgemm_tlr_core.cuh
src/lapack/: Makefile  Xpotrf.cu  Xpotrf_core.cuh
test-scripts/: gemm-lr-lld-speedups.sh  gemm-lr-lll-speedups.sh  gemm-tlr-lld-ranks.sh  gemm-tlr-lll-lld.sh  gemm-tlr-lll-ranks.sh  kblas-define-sm.sh  kblas-define-visible-devices.sh  kblas-test-batch-parallel.py  kblas-test-l3-parallel.py  kblas-test-l3.py  version_update.py
testing/: Makefile  flops.h  test_cgemv2.c  test_cgemv2_offset.c  test_chemv.c  test_chemv_offset.c  test_ctrmm.c  test_ctrmm_cpu.c  test_ctrsm.c  test_ctrsm_cpu.c  test_dgemmXt.c  test_dgemm_mgpu.c  test_dgemv.c  test_dgemv2_dim.c  test_dgemv2_offset.c  test_dgemv_mgpu.c  test_dgemv_offset.c  test_dscal.c  test_dsymv_mgpu.c  test_dsymv_offset.c  test_dtrmm.c  test_dtrmm_cpu.c  test_dtrsm.c  test_dtrsm_cpu.c  test_dtrsm_mgpu.c  test_gemm.ch  test_sgemm_mgpu.c  test_sgemv.c  test_sgemv2.c  test_sgemv2_dim.c  test_sgemv2_offset.c  test_sgemv_offset.c  test_ssymv.c  test_ssymv_mgpu.c  test_strmm.c  test_strmm_cpu.c  test_strmm_mgpu.c  test_strsm.c  test_strsm_cpu.c  test_strsm_mgpu.c  (+25 more)
testing/batch_svd_qr/: Makefile
testing/batch_triangular/: Makefile  test_Xaca_batch.cpp  test_Xara_batch.cpp  test_Xgemm_batch.cpp  test_Xgeqp2_batch.cpp  test_Xgeqrf_batch.cpp  test_Xgesvj_batch.cpp  test_Xlauum_batch.cpp  test_Xposv_batch.cpp  test_Xpoti_batch.cpp  test_Xpotrf_batch.cpp  test_Xpotri_batch.cpp  test_Xpotrs_batch.cpp  test_Xsvd_full_batch.cpp  test_Xsyrk_batch.cpp  test_Xtrmm_batch.cpp  test_Xtrsm_batch.cpp  test_Xtrtri_batch.cpp  test_Xtsqrt_vbatch.cpp
(+102 files in other folders)
